自动生成pdf逻辑